# gem3-mapper

./: .cproject  .gitignore  .gitmodules  .project  AUTHORS  Makefile  Makefile.mk  Makefile.mk.in  README.md  VERSION  config.status  configure  configure.ac  list.todo
autom4te.cache/: requests  traces.0
docker/: Dockerfile  README.md
ds/: COPYRIGHT.MPL.txt  Makefile  README  blind2.c  bwt.c  bwt_aux.c  bwt_aux.h  common.h  deep2.c  ds.c  ds_ssort.h  helped.c  lcp_aux.c  lcp_aux.h  shallow.c  suftest2.c  testlcp.c  unbwt.c
id/: bwt_dev.c  shift.c  vm  vm.c
include/: align.h  align_bpm.h  align_bpm_distance.h  align_bpm_gpu.h  align_bpm_pattern.h  align_ond.h  align_swg.h  align_swg_score.h  align_swg_simd.h  approximate_search.h  approximate_search_control.h  approximate_search_filtering.h  approximate_search_filtering_adaptive.h  approximate_search_filtering_adaptive_stepwise.h  approximate_search_filtering_base.h  approximate_search_filtering_complete.h  approximate_search_filtering_control.h  approximate_search_filtering_stages.h  approximate_search_generate_candidates.h  approximate_search_metrics.h  approximate_search_neighborhood.h  approximate_search_parameters.h  approximate_search_region_profile.h  approximate_search_stepwise.h  approximate_search_verify_candidates.h  archive.h  archive_builder.h  archive_builder_index.h  archive_builder_text.h  archive_builder_text_parser.h  archive_check.h  archive_score.h  archive_score_pe.h  archive_score_se.h  archive_search.h  archive_search_cache.h  archive_search_group.h  archive_search_paired_parameters.h  archive_search_parameters.h  archive_search_pe.h  (+169 more)
include/align/: align.h  align_bpm.h  align_bpm_distance.h  align_bpm_pattern.h  align_kmer_filter.h  align_kmer_filter_nway.h  align_ond.h  align_swg.h  align_swg_banded.h  align_swg_score.h  align_swg_simd.h  alignment.h  alignment_filters.h
include/approximate_search/: approximate_search.h  approximate_search_control.h  approximate_search_filtering_adaptive.h  approximate_search_filtering_complete.h  approximate_search_filtering_stages.h  approximate_search_generate_candidates.h  approximate_search_hybrid.h  approximate_search_metrics.h  approximate_search_neighborhood.h  approximate_search_region_profile.h  approximate_search_stages.h  approximate_search_stepwise.h  approximate_search_verify_candidates.h  mm_search.h
include/archive/: archive.h  archive_builder.h  archive_builder_index.h  archive_builder_text.h  archive_builder_text_parser.h  archive_check.h  archive_score_pe.h  archive_score_se.h  archive_search.h  archive_search_cache.h  archive_search_paired_parameters.h  archive_search_parameters.h  archive_search_pe.h  archive_search_pe_stages.h  archive_search_pe_stepwise.h  archive_search_se.h  archive_search_se_stepwise.h  archive_select.h  archive_select_parameters.h  archive_text.h  archive_text_rl.h  locator.h  locator_builder.h  sampled_rl.h
include/data_structures/: cdna_bitwise_text.h  cdna_text.h  dna_text.h  interval_set.h  pattern.h  quality_model.h  sequence.h  text_collection.h
include/filtering/: filtering_candidates.h  filtering_candidates_align.h  filtering_candidates_align_local.h  filtering_candidates_extend.h  filtering_candidates_process.h  filtering_candidates_process_buffered.h  filtering_candidates_verify.h  filtering_candidates_verify_buffered.h  filtering_region.h  filtering_region_align.h  filtering_region_align_configure.h  filtering_region_cache.h  filtering_region_verify.h  kmer_counting.h  region_profile.h  region_profile_adaptive.h  region_profile_fixed.h  region_profile_schedule.h  region_set.h
include/fm_index/: bwt.h  bwt_basic.h  bwt_commons.h  bwt_sbasic.h  fm_index.h  fm_index_query.h  fm_index_search.h  rank_mtable.h  rank_mtable_builder.h  sa_builder.h  sampled_sa.h
include/gpu/: gpu_buffer_align_bpm.h  gpu_buffer_bpm_align.h  gpu_buffer_bpm_distance.h  gpu_buffer_bpm_pattern.h  gpu_buffer_collection.h  gpu_buffer_fmi_asearch.h  gpu_buffer_fmi_bsearch.h  gpu_buffer_fmi_decode.h  gpu_buffer_fmi_ssearch.h  gpu_buffer_kmer_filter.h  gpu_config.h  gpu_structures.h
include/io/: buffered_input_file.h  buffered_output_file.h  (+13 more)
resources/: Makefile
scripts/: fastq.append.pe.sh  fastq.append.se.sh  fastq.count.sh  fastq.deinterleave.sh  fastq.interleave.sh  gem.test.base.sh  gem.utest.diff.sh  gem.utest.sh  git.cleanup.sh  logit.calibration.R  logit.extract.sh  logit.header  logit.header.pe  logit.header.se  map.unmapped.sh  map2fastq.sh  mapper.run.rprof.test.sh  mason.sim.pe.chr1.sh  mason.sim.pe.sh  mason.sim.se.sh  ns.repeated.sh  ns.test.sh  pe2summary.sh  plot.heatmap.r  sam.extract.qsum.sh  sam.profile.sh  sam.recount.pe.sh  sam.recount.se.sh  sam.sort.sh  sam.summary.pe.sh  sam.summary.se.sh  sam2fastq.pe.sh  sam2fastq.rename.sh  sam2fastq.se.sh  sam2fastq.sh  scp.aopccuda.sh  scp.cluster2.sh  smap  smap-diff  smap-diff-focus  (+13 more)
src/: Makefile  align.c  align_bpm.c  align_bpm_distance.c  align_bpm_gpu.c  align_bpm_pattern.c  align_ond.c  align_swg.c  align_swg_score.c  align_swg_simd.c  approximate_search.c  approximate_search_control.c  approximate_search_filtering.c  approximate_search_filtering_adaptive.c  approximate_search_filtering_adaptive_stepwise.c  approximate_search_filtering_base.c  approximate_search_filtering_complete.c  approximate_search_filtering_control.c  approximate_search_filtering_stages.c  approximate_search_generate_candidates.c  approximate_search_metrics.c  approximate_search_neighborhood.c  approximate_search_parameters.c  approximate_search_region_profile.c  approximate_search_stepwise.c  approximate_search_verify_candidates.c  archive.c  archive_builder.c  archive_builder_index.c  archive_builder_text.c  archive_builder_text_parser.c  archive_check.c  archive_hypertext_builder.c  archive_index_builder.c  archive_score.c  archive_score_pe.c  archive_score_se.c  archive_search.c  archive_search_cache.c  archive_search_group.c  (+167 more)
test/: Makefile  suite_stats_vector.c  utest_commons.c
tools/: Makefile  gem-constructor.c  gem-filtering.c  gem-indexer.c  gem-mapper.c  gem-retriever.c
(+899 files in other folders)
